--- a/META.yml
+++ b/META.yml
@@ -2,22 +2,23 @@
 abstract: 'Schedule batch files for the SList suite of programs'
 author:
   - 'Klaus Eichner <klaus03@gmail.com>'
-build_requires: {}
+build_requires:
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  Module::Build: 0.3
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
-license: perl
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141170'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Acme-SList-Scheduler
-provides:
-  Acme::SList::Scheduler:
-    file: lib/Acme/SList/Scheduler.pm
-    version: 0.02
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-  Acme::SList::Utilities: 0.01
+  Acme::SList::Utilities: '0.01'
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.02
+  repository: https://github.com/klaus03/Acme-SList-Scheduler.git
+version: '0.03'
